DuPont DevSB/src/objects/Segment__c.object
<CustomObject>
    <description>Segments identify and define how prospective buyers (customers, end users, etc.) or markets (applications, industries, etc) are combined into groups with common needs which respond similarly to marketing actions.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>Latin America</fullName>
                </value>
                <value>
                    <fullName>North America</fullName>
                </value>
                <value>
                    <fullName>Worldwide</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated. Its is case sensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Owning_Org__c</fullName>
        <label>Owning Org</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AGNH-Qualicon</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BI-Env</fullName>
                </value>
                <value>
                    <fullName>BI-Surf</fullName>
                </value>
                <value>
                    <fullName>CORP</fullName>
                </value>
                <value>
                    <fullName>DPT-Aramids</fullName>
                </value>
                <value>
                    <fullName>ELEC</fullName>
                </value>
                <value>
                    <fullName>NOW</fullName>
                </value>
                <value>
                    <fullName>NOW-ASPS/Transcovers</fullName>
                </value>
                <value>
                    <fullName>NOW-Cons Prod</fullName>
                </value>
                <value>
                    <fullName>NOW-Consumer Absorbents</fullName>
                </value>
                <value>
                    <fullName>NOW-Contamination Control</fullName>
                </value>
                <value>
                    <fullName>NOW-Critical Cleaning</fullName>
                </value>
                <value>
                    <fullName>NOW-Envelopes</fullName>
                </value>
                <value>
                    <fullName>NOW-Graphics</fullName>
                </value>
                <value>
                    <fullName>NOW-Home Furnishing</fullName>
                </value>
                <value>
                    <fullName>NOW-I&amp;AP</fullName>
                </value>
                <value>
                    <fullName>NOW-Landscape Systems</fullName>
                </value>
                <value>
                    <fullName>NOW-Medical Fabrics</fullName>
                </value>
                <value>
                    <fullName>NOW-Medical Packaging</fullName>
                </value>
                <value>
                    <fullName>NOW-Medical Specialties</fullName>
                </value>
                <value>
                    <fullName>NOW-Separations Solutions</fullName>
                </value>
                <value>
                    <fullName>NOW-Sontara</fullName>
                </value>
                <value>
                    <fullName>NOW-Tyvek</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_Strategic__c</fullName>
        <inlineHelpText>e.g. pro-line concept</inlineHelpText>
        <label>Relationship-Strategic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Distribution__c</fullName>
        <inlineHelpText>Distribution Service Level</inlineHelpText>
        <label>Sales-Distribution</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Customer__c</fullName>
        <inlineHelpText>e.g. Customer Service</inlineHelpText>
        <label>Service-Customer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Technical__c</fullName>
        <inlineHelpText>e.g. Technical Consulting</inlineHelpText>
        <label>Service-Technical</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supply_Return__c</fullName>
        <inlineHelpText>e.g. return of good policy</inlineHelpText>
        <label>Supply-Return</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supply__c</fullName>
        <label>Supply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sell</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Segment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Owning_Org__c</columns>
        <columns>Geography__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BI_EMEA</fullName>
        <columns>NAME</columns>
        <columns>Relationship__c</columns>
        <columns>Supply__c</columns>
        <columns>Service_Customer__c</columns>
        <columns>Service_Technical__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Owning_Org__c</field>
            <operation>equals</operation>
            <value>BI,BI-Cons Prod,BI-Cons Prod-Fire Safety,BI-Env,BI-Surf</value>
        </filters>
        <filters>
            <field>Geography__c</field>
            <operation>contains</operation>
            <value>EMEA</value>
        </filters>
        <label>BI - EMEA</label>
        <language>en_US</language>
        <sharedTo>
            <group>BIEMEA</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segments</pluralLabel>
    <recordTypes>
        <fullName>SBU_Segment</fullName>
        <active>true</active>
        <description>For Segments off Other SBUs Growth Teams</description>
        <label>SBU Segment</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>